# so_insights

./: .dockerignore  .env.example  .gitignore  Procfile  README.md  analyzer.Dockerfile  api.Dockerfile  frontend.Dockerfile  ingester.Dockerfile  langgraph.json  notebook.ipynb  pyproject.toml  relevant_articles.md
analyzer/: README.md  main.py  pyproject.toml
analyzer/src/: analyzer.py  analyzer_settings.py  article_evaluator.py  cluster_evaluator.py  cluster_overview_generator.py  clustering_analysis_generator.py  clustering_engine.py  evaluator.py  session_summary_generator.py  starters_generator.py  util.py  vector_repository.py
analyzer/src/analyzer_agent/: examples.py  graph.py  state.py  types.py  utils.py
analyzer/tests/: test_cluster.py  test_clustering_engine.py  test_util.py  test_vector_repository.py
backend/: .gitignore  Dockerfile  README.md  generate_client_sdk.py  pyproject.toml
backend/src/: api.py  api_settings.py  dependencies.py  models.py  schemas.py  set_of_unique_articles.py  settings.py
backend/src/routers/: analysis_runs.py  analysis_tasks.py  clustering.py  ingestion_configs.py  ingestion_runs.py  organizations.py  search_query_sets.py  starters.py  workspaces.py
backend/tests/: test_set_of_unique_articles.py
clusterer/: main.py  pyproject.toml
frontend/: .gitignore  README.MD  README.md  app.py  app_settings.py  pyproject.toml
frontend/pages/: 1_🗂️Workspaces.py  2_📥Ingestion.py  3_💬Chatbot.py  4_🔍Analysis.py  4_🔍Topics.py  5_✍️Content_Studio.py
frontend/sdk/: pyproject.toml
frontend/sdk/so_insights_client/: __init__.py
frontend/sdk/so_insights_client/api/analysis_runs/: create_analysis_run.py  delete_cluster_feedback.py  get_analysis_run.py  get_cluster.py  list_analysis_runs.py  list_clusters_for_clustering_run.py  list_clusters_with_articles_for_run.py  list_topics_with_articles_for_agentic_run.py  set_cluster_feedback.py
frontend/sdk/so_insights_client/api/analysis_tasks/: create_analysis_task.py  get_analysis_task.py  list_analysis_tasks.py
frontend/sdk/so_insights_client/api/clustering/: create_clustering_session.py  delete_cluster_feedback.py  get_cluster.py  get_clustering_session.py  list_clustering_sessions.py  list_clusters_for_session.py  list_clusters_with_articles_for_session.py  set_cluster_feedback.py
frontend/sdk/so_insights_client/api/default/: get_workspace.py  root_get.py
frontend/sdk/so_insights_client/api/ingestion_configs/: create_rss_ingestion_config.py  create_search_ingestion_config.py  get_rss_ingestion_config.py  get_search_ingestion_config.py  list_ingestion_configs.py  list_rss_ingestion_configs.py  list_search_ingestion_configs.py  update_rss_ingestion_config.py  update_search_ingestion_config.py
frontend/sdk/so_insights_client/api/ingestion_runs/: create_ingestion_run.py  get_ingestion_run.py  list_ingestion_runs.py  list_ingestion_runs_for_ingestion_config.py  list_ingestion_runs_for_search_query_set.py
frontend/sdk/so_insights_client/api/organizations/: get_organization.py  get_organization_by_secret_code.py
frontend/sdk/so_insights_client/api/search_query_sets/: create_search_query_set.py  delete_search_query_set.py  get_search_query_set_workspaces_workspace_id_search_query_sets_search_query_set_id_get.py  list_search_query_sets.py  update_search_query_set.py
frontend/sdk/so_insights_client/api/starters/: get_latest_starters.py
frontend/sdk/so_insights_client/api/workspaces/: create_workspace.py  get_articles_by_ids.py  get_workspace.py  list_articles.py  list_workspaces.py  update_workspace.py
frontend/sdk/so_insights_client/models/: __init__.py  agentic_analysis_params.py  agentic_analysis_result.py  analysis_result.py  analysis_result_analysis_type.py  analysis_run.py  analysis_run_analysis_type.py  analysis_run_create.py  analysis_run_create_analysis_type.py  analysis_task.py  analysis_task_create.py  analysis_type.py  article.py  article_content_cleaner_output.py  article_evaluation.py  article_evaluation_relevance_level.py  article_preview.py  cluster.py  cluster_evaluation.py  cluster_evaluation_decision.py  cluster_evaluation_relevance_level.py  cluster_feedback.py  cluster_overview.py  cluster_with_articles.py  clustering_analysis_params.py  clustering_analysis_result.py  clustering_run_evaluation_result.py  clustering_session.py  clustering_session_create.py  clustering_session_metadata.py  content_fetching_result.py  hdbscan_settings.py  ingestion_config_type.py  ingestion_run.py  ingestion_run_create.py  ingestion_run_status.py  language.py  list_articles_sort_by.py  list_clusters_for_clustering_run_relevance_levels_type_0_item.py  list_clusters_for_session_relevance_levels_type_0_item.py  (+28 more)
frontend/src/: app.py  app_settings.py  content_generation.py  image_generation.py  shared.py  util.py
frontend/src/pages/: analysis.py  chatbot.py  content_studio.py  explorer.py  ingestion.py  topics.py  workspace.py  workspaces.py
frontend/src/sdk/so_insights_client/models/: workspace.py
frontend/tests/: test_shared.py  test_util.py
ingester/: README.md  main.py  pyproject.toml
ingester/src/: content_cleaner.py  content_fetcher.py  ingester_settings.py  mongo_db_operations.py  rss.py  search.py  vector_indexing.py
ingester/src/search_providers/: base.py  duckduckgo_provider.py  serperdev_provider.py
ingester/src/url_to_markdown_converters/: __init__.py  base.py  firecrawl_url_to_markdown_converter.py
ingester/tests/: test_content_cleaner.py  test_ingester_util.py  test_rss.py
ingester/tests/search_providers/: test_base.py  test_duckduckgo_search_provider.py  test_serpersev_search_provider.py
scripts/: generate_client_sdk.py
sdk/: README.md  pyproject.toml
shared/: README.md  db.py  models.py  pyproject.toml  region.py
shared/shared/: content_fetching_models.py  db.py  db_settings.py  language.py  models.py  reader_api.py  region.py  set_of_unique_articles.py  util.py
shared/tests/: test_models.py  test_set_of_unique_articles.py  test_util.py
so_insights/: api.py  app.py  dependencies.py  models.py  set_of_unique_articles.py  settings.py
(+8 files in other folders)
