[tool.poetry]
name = "so-insights"
version = "0.1.0"
description = ""
authors = ["Samuel Mallet  <69467005+SuperMuel@users.noreply.github.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
shared = { path = "shared", develop = true }
so-insights-back = { path = "backend", develop = true }
so-insights-front = { path = "frontend", develop = true }


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
