[tool.poetry]
name = "so-insights-front"
version = "0.1.0"
description = ""
authors = ["Samuel Mallet  <69467005+SuperMuel@users.noreply.github.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.0"
arrow = "^1.3.0"
pydantic-settings = "^2.4.0"
so-insights-client = { path = "sdk" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
