[tool.poetry]
name = "so-insights-front"
version = "0.1.0"
description = ""
authors = ["Samuel Mallet  <69467005+SuperMuel@users.noreply.github.com>"]
readme = "README.md"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = "^1.37.0"
arrow = "^1.3.0"
pydantic-settings = "^2.4.0"
so-insights-client = { path = "sdk" }
langchain = "^0.2.12"
langchain-openai = "^0.1.20"
langchain-community = "^0.2.11"
langchainhub = "^0.1.20"
beanie = "^1.26.0"
shared = { path = "../shared", develop = true }
langchain-pinecone = "^0.1.3"
langchain-voyageai = "^0.1.1"
millify = "^0.1.1"
streamlit-cookies-controller = "^0.0.4"
langchain-anthropic = "^0.1.23"
babel = "^2.16.0"
st-copy-to-clipboard = "^0.1.6"
st-theme = "^1.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
freezegun = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
