[tool.poetry]
name = "ingester"
version = "0.1.0"
description = ""
authors = ["Samuel Mallet  <69467005+SuperMuel@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
shared = { path = "../shared", develop = true }
pydantic-settings = "^2.4.0"
langchain = "^0.2.14"
langchain-voyageai = "^0.1.1"
langchain-pinecone = "^0.1.3"
langchain-openai = "^0.1.22"
duckduckgo-search = "^6.3.7"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
typer = "^0.12.3"
fastapi = "^0.113.0"
uvicorn = "^0.30.6"
feedparser = "^6.0.11"
dateparser = "^1.2.0"
firecrawl-py = "^1.10.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
make-it-sync = "^2.0.0"
mongomock-motor = "^0.0.31"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
